--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -29,14 +29,20 @@
       <div class="section-sub-header">
         National Institutes of Health
       </div>
-    </div>
-    <div class="section">
-      <div class="section-header">
+      <div class="section-text">
         To fulfill program requirements, All of Us requests the following information
-        for each workspace:
+        for each workspace.
+        <div *ngIf="!hideDetailsLaterOption">
+          If you are not ready to complete this questionnaire,
+          or if this is a temporary workspace, please check this box (any entries already made will not be saved):
+        </div>
+      </div>
+      <div class="section-text" *ngIf="!hideDetailsLaterOption">
+        <input type="checkbox" [(ngModel)]="fillDetailsLater" (click)="clearAllFields()">
+        I will provide this information later
       </div>
     </div>
-    <div>
+    <div *ngIf="!fillDetailsLater">
       <div class="section research-purpose-section">
         <div class="required-field section-header">
           <div class="section-header">Describe your research purpose</div>
@@ -68,14 +74,16 @@
                   [clrDisabled]="mode == Mode.Edit">
               </clr-checkbox>
               <div>
-                <label class="checkbox-label" for="clr-checkbox-disease-focused-research"><h3 class="data-use-label">{{researchPurposeItems.diseaseFocusedResearch.shortDescription}}</h3></label>
+                <label class="checkbox-label" for="clr-checkbox-disease-focused-research"><h3 class="data-use-label">
+                  {{researchPurposeItems.diseaseFocusedResearch.shortDescription}}</h3></label>
                 <div>
                   {{researchPurposeItems.diseaseFocusedResearch.longDescription}}
                 </div>
                 <div style="display: flex">
                   <input type="text" class="input" name="disease-specification"
                       [(ngModel)]="workspace.researchPurpose.diseaseOfFocus" [disabled]="mode == Mode.Edit"
-                      placeholder="Name of Disease" style="width: calc(50% - 2rem); margin-right: 2rem; margin-to`p: 0.5rem">
+                      placeholder="Name of Disease"
+                      style="width: calc(50% - 2rem); margin-right: 2rem; margin-to`p: 0.5rem">
                 </div>
               </div>
             </div>
@@ -90,7 +98,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-methods-development"><h3 class="data-use-label">{{researchPurposeItems.methodsDevelopment.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-methods-development"><h3 class="data-use-label">
+                    {{researchPurposeItems.methodsDevelopment.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.methodsDevelopment.longDescription}}
                   </div>
@@ -106,7 +115,8 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-aggregate-analysis"><h3 class="data-use-label">{{researchPurposeItems.aggregateAnalysis.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-aggregate-analysis"><h3 class="data-use-label">
+                    {{researchPurposeItems.aggregateAnalysis.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.aggregateAnalysis.longDescription}}
                   </div>
@@ -124,7 +134,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-control-set"><h3 class="data-use-label">{{researchPurposeItems.controlSet.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-control-set"><h3 class="data-use-label">
+                    {{researchPurposeItems.controlSet.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.controlSet.longDescription}}
                   </div>
@@ -140,7 +151,8 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-ancestry"><h3 class="data-use-label">{{researchPurposeItems.ancestry.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-ancestry"><h3 class="data-use-label">
+                    {{researchPurposeItems.ancestry.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.ancestry.longDescription}}
                   </div>
@@ -158,7 +170,8 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-population"><h3 class="data-use-label">{{researchPurposeItems.population.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-population"><h3 class="data-use-label">
+                    {{researchPurposeItems.population.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.population.longDescription}}
                   </div>
@@ -174,7 +187,8 @@
                         [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-commercial-purpose"><h3 class="data-use-label">{{researchPurposeItems.commercialPurpose.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-commercial-purpose"><h3 class="data-use-label">
+                    {{researchPurposeItems.commercialPurpose.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.commercialPurpose.longDescription}}
                   </div>
@@ -193,7 +207,10 @@
                       shape="plus-circle" class="underserved-icon"></clr-icon>
                 </div>
                 <div>
-                  <label class="checkbox-label" (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"><h3 class="data-use-label">{{researchPurposeItems.containsUnderservedPopulation.shortDescription}}</h3></label>
+                  <label class="checkbox-label"
+                         (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation">
+                    <h3 class="data-use-label">
+                      {{researchPurposeItems.containsUnderservedPopulation.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.containsUnderservedPopulation.longDescription}}
                   </div>
@@ -228,7 +245,7 @@
         </div>
       </div>
     </div>
-    <div class="section request-review-section">
+    <div class="section request-review-section" *ngIf="!fillDetailsLater">
       <h3 class="section-header">{{researchPurposeItems.requestReview.shortDescription}}</h3>
       <div class="checkbox-group" style="padding-top: 0.3rem">
         <div style="display: flex">
