Icons to action on workspace about page

--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -19,23 +19,29 @@
       <clr-dropdown-menu clrPosition="bottom-right" *clrIfOpen>
         <label class="dropdown-header">Workspace Actions</label>
         <button class="btn" routerLink="/workspaces/{{wsNamespace}}/{{wsId}}/clone" routerLinkActive="active">
+          <clr-icon shape="copy" class="icons"></clr-icon>
           Clone
         </button>
         <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-left">
           <button class="btn" [disabled]="!writePermission" routerLink="/workspaces/{{wsNamespace}}/{{wsId}}/edit"
                       routerLinkActive="active">
+            <clr-icon shape="pencil" class="icons"></clr-icon>
             Edit
           </button>
           <span *ngIf="!writePermission" class="tooltip-content">Requires Write Permission</span>
         </span>
         <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-left">
-          <button class="btn" [disabled]="!ownerPermission" (click)="share()">Share</button>
+          <button class="btn" [disabled]="!ownerPermission" (click)="share()">
+            <clr-icon shape="share" class="icons"></clr-icon>
+            Share
+          </button>
           <span *ngIf="!ownerPermission" class="tooltip-content">
             Owner access is required to share the workspace.
           </span>
         </span>
         <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-left">
           <button class="btn" [disabled]="!ownerPermission" (click)="confirmDelete()">
+           <clr-icon shape="trash" class="icons"></clr-icon>
             Delete
           </button>
           <span *ngIf="!ownerPermission" class="tooltip-content">Requires Owner Permission</span>
