--- a/ui/src/app/views/workspace-nav-bar/component.css
+++ b/ui/src/app/views/workspace-nav-bar/component.css
@@ -114,3 +114,9 @@ label.dropdown-header {
   padding-left: 5rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
+
+.btn-group .dropdown-menu clr-icon {
+  display: inline-grid;
+  margin-left: -0.4rem;
+}
+
