--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
@@ -10,7 +10,6 @@
       </button>
       <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
         <h4 class="dropdown-header">Program Data</h4>
-
         <button
           *ngFor="let criteria of programTypes"
           id="criteria.type"
@@ -21,16 +20,14 @@
           clrDropdownItem>{{criteria.name}}</button>
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
-        <ng-container *ngFor="let criteria of domainTypes">
-          <!--*ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "-->
-          <button
-                  id="criteria.type"
-                  class="dropdown-item"
-                  type="button"
-                  [disabled]="criteria.disabled"
-                  (click)="launchWizard(criteria)"
-                  clrDropdownItem>{{criteria.name}}</button>
-        </ng-container>
+        <button
+          *ngFor="let criteria of domainTypes"
+          id="criteria.type"
+          class="dropdown-item"
+          type="button"
+          [disabled]="criteria.disabled"
+          (click)="launchWizard(criteria)"
+          clrDropdownItem>{{criteria.name}}</button>
       </clr-dropdown-menu>
     </clr-dropdown>
   </div>
