--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -13,11 +13,11 @@
     <crit-code-dropdown (onOptionChange)="optionChange($event)" [selectedType] = "name"></crit-code-dropdown>
     </ng-container>
   </div>
-  <div [ngClass]="showDropDown()? 'search-container' :'search-width'" >
+  <div [ngClass]="showDropDown()? 'search-container' :'search-width'">
     <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
   </div>
 </div>
 <div *ngIf="numMatches > 1">
   <b>Note:</b> There are {{numMatches}} matches for your search
 </div>
-<crit-node *ngFor="let item of children" [node]="item"></crit-node>
+<crit-node *ngFor="let child of children" [node]="child"></crit-node>
