--- a/ui/src/app/views/recent-work/component.html
+++ b/ui/src/app/views/recent-work/component.html
@@ -1,5 +1,5 @@
 <div *ngIf="elementVisible()" class="recent-work" style="display: inline-block">
-    <div *ngIf="leftScrollVisible()" class="scroll-indicator" (click)="moveDownList()">
+    <div *ngIf="leftScrollVisible()" class="scroll-indicator" id="left-scroll" (click)="moveDownList()">
         <app-left-scroll-icon></app-left-scroll-icon>
     </div>
     <div class="title">
@@ -12,7 +12,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="rightScrollVisible()" class="scroll-indicator" style="float: right; top: 3.2rem; right: -9rem" (click)="moveUpList()">
+    <div *ngIf="rightScrollVisible()" class="scroll-indicator" id="right-scroll" style="float: right; top: 3.2rem; right: -9rem" (click)="moveUpList()">
         <app-right-scroll-icon></app-right-scroll-icon>
     </div>
 </div>
