RW-1107 add subtypes for conditions to constant

--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -10,7 +10,7 @@
 <div class="dropdown-search-container">
   <div [ngClass]="{'condition-dropdown' : showDropDown()}">
     <ng-container *ngIf = "showDropDown() && !loading">
-    <crit-code-dropdown (onOptionChange)="optionChange($event)" [selectedType] = "name"></crit-code-dropdown>
+    <crit-code-dropdown (onOptionChange)="optionChange($event)" [_type]="name"></crit-code-dropdown>
     </ng-container>
   </div>
   <div [ngClass]="showDropDown()? 'search-container' :'search-width'">
@@ -20,4 +20,4 @@
 <div *ngIf="numMatches > 1">
   <b>Note:</b> There are {{numMatches}} matches for your search
 </div>
-<crit-node *ngFor="let child of children" [node]="child"></crit-node>
+<crit-node *ngFor="let item of children" [node]="item"></crit-node>
