--- a/ui/src/app/cohort-search/code-dropdown/code-dropdown.component.html
+++ b/ui/src/app/cohort-search/code-dropdown/code-dropdown.component.html
@@ -1,19 +1,16 @@
 <clr-dropdown>
     <button type="button" class="btn btn-outline btn-outline-primary" clrDropdownTrigger>
-        <span *ngIf = "dropDownSelected !== ''; else elseBlock">{{dropDownSelected}}</span>
-        <ng-template #elseBlock>
-            <span>ICD9 Codes</span>
-        </ng-template>
+        {{dropDownSelected}}
         <clr-icon shape="caret down"></clr-icon>
     </button>
     <clr-dropdown-menu *clrIfOpen>
-        <ng-container *ngFor="let criteria of domainTypes">
-            <button *ngIf="criteria.name ==='ICD9 Codes' || criteria.name ==='ICD10 Codes' "
+        <ng-container *ngFor="let option of options">
+            <button
                 id="criteria.type"
                 class="dropdown-item"
                 type="button"
-                (click)="launchTree(criteria)"
-                clrDropdownItem>{{criteria.name}}</button>
+                (click)="launchTree(option)"
+                clrDropdownItem>{{option.name}}</button>
         </ng-container>
     </clr-dropdown-menu>
 </clr-dropdown>
